# jamf-package-updater

./: Cargo.toml  LICENSE  README.md
.github/workflows/: jamf-upload.yml  release.yml
src/: cli.rs  credentials.rs  main.rs
src/api/: client.rs  mod.rs  packages.rs  policies.rs
src/commands/: auth.rs  mod.rs  update.rs
src/models/: mod.rs  package.rs  policy.rs
